# seeded-contract-rust

./: .gitignore  Cargo.toml  README.md  TODO.md
client/: .prettierrc.json  etsc.config.js  nodemon.json  package-lock.json  package.json  tsconfig.json
client/src/: hello_world.ts  index.ts  presale_api.ts  solana_anchor.json  utils.ts
scripts/: contract-build.sh  contract-deploy.sh  create-wallet.sh
src/: entrypoint.rs  lib.rs  presale.rs  utils.rs
