cargo-features = ["edition2021"]

[package]
name = "seeded-contract"
version = "0.0.1"
description = "Solana smart contract"
authors = ["Justin Cremer <jacremer@live.com>"]
repository = "https://github.com/xiuxiu62/seeded-contract"
license = "MIT"
edition = "2021"
exclude = ["js/**"]

[features]
exclude_entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.8.0"

[dev-dependencies]
solana-program-test = "1.8.0"
solana-sdk = "1.8.0"

[lib]
crate-type = ["cdylib", "lib"]

